--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,142 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap');
+
+:root {
+  --primary-text: 'Poppins';
+  --header-text: 'Zen Dots';
+  --primary-color: #4253AF;
+  --secondary-color: #fff;
+}
+
 body {
-    background-color: black;
-    color: white;
+  margin: 0;
+  padding: 0;
+  font-family: var(--primary-text);
+}
+
+/* Header */
+
+.header {
+  font-weight: bold;
+  color: var(--primary-color);
+  margin: 1rem;
+  font-family: var(--header-text);
+}
+
+
+/* Navbar */
+
+.nav {
+  overflow: hidden;
+  border: 2px solid white;
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+  text-align: right;
+  line-height: 2.5rem;
+}
+
+.nav a {
+  text-align: center;
+  text-decoration: none;
+  color: var(--secondary-color);
+  padding: 0.8%;
+  overflow: hidden;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.nav a:hover {
+  background-color: #0b154d;
+}
+
+.clearfix {
+  clear: both;
+}
+
+/* Content Body */
+
+.description{
+  padding: 100px;
+}
+
+.cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.algo-cards {
+  background-color: var(--primary-color);
+  border: 1px solid var(--secondary-color);
+  border-radius: 2%;
+  height: 238.5px;
+  width: 300px;
+  padding: 7px;
+}
+
+.algo-cards img {
+  height: 175px;
+  width: 300px;
+}
+
+.card-desc {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.card-desc p {
+  color: var(--secondary-color);
+  font-family: var(--secondary-color);
+}
+
+.card-desc button {
+  border: none;
+  border-radius: 2%;
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
+  width: 4rem;
+  font-weight: bolder;
+  font-size: 1.7em;
+}
+
+.card-desc button:hover {
+  background-color: rgb(236, 217, 217);
+}
+
+/* Footer */
+
+.footer {
+  font-size: 0.9em;
+  display: block;
+  margin: auto;
+  margin-top: 2rem;
+  width: 95%;
+  border-top: 2px solid var(--primary-color);
+  text-align: center;
+  font-weight: lighter;
+}
+
+.footer ul {
+  padding-inline-start: 0;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
+.online-presence h3 {
+  margin-bottom: 14px;
+}
+
+.online-presence ul li {
+  list-style-type: none;
+}
+
+.online-presence ul li a {
+  text-decoration: none;
+  color: black;
+}
+
+.copyright {
+  display: fixed;
+  font-weight: bold;
 }
